# ClusterTutorial

./: .gitignore  CMakeLists.txt  CMakeLists.txt1  ClusterTutorial.qrc  GIT_COMMIT_PROTOCOLS  UnitTester.py  VSS_paths.txt  dobuild.sh  domake.sh  main.cpp  main_BACKUP_10march2026.cpp  main_example_wayland_plugin.cpp  main_main.cpp  start_dash.sh
ClusterTutorial/qmldir/: App.qml  ClusterTutorial.qml  Cluster_Art.ui.qml  Constants.qml  DirectoryFontLoader.qml  EventListSimulator.qml  Fuel_dial_195_43.ui.qml  Iso_195_156.ui.qml  Iso_195_157.ui.qml  KMS_Totals_Trip.ui.qml  Left_Indicator.qml  Left_Indicator.ui.qml  Right_Indicator.qml  Right_Indicator.ui.qml  Temp_dial_195_83.ui.qml  Values.qml  absIcon.ui.qml  fuelIcon.ui.qml  iceIcon.ui.qml  parkingBrakeIcon.ui.qml  parkingLightIcon.ui.qml  qmldir  seatbelt.ui.qml
custom_libs/: libQt6QuickStudioApplication.prl  libQt6QuickStudioApplication.so.6.8.5  libQt6QuickStudioComponents.prl  libQt6QuickStudioDesignEffects.prl  libQt6QuickStudioDesignEffects.so.6  libQt6QuickStudioEffects.prl  libQt6QuickStudioEventSimulator.prl  libQt6QuickStudioEventSimulator.so.6  libQt6QuickStudioEventSystem.prl  libQt6QuickStudioLogicHelper.prl  libQt6QuickStudioLogicHelper.so.6.8.5  libQt6QuickStudioMultiText.prl  libQt6QuickStudioMultiText.so.6  libQt6QuickStudioUtils.prl  libQt6QuickStudioUtils.so.6
imports/Qt5Compat/GraphicalEffects/: GaussianBlur.qml  qmldir
imports/Qt5Compat/GraphicalEffects/private/: qmldir
imports/QtQuick/Studio/Application/: qmldir
imports/QtQuick/Studio/Components/: ArcItem.qml  BorderItem.qml  RectangleItem.qml  qmldir
imports/QtQuick/Studio/DesignEffects/: qmldir
imports/QtQuick/Studio/Effects/: qmldir
imports/QtQuick/Studio/EventSimulator/: qmldir
imports/QtQuick/Studio/EventSystem/: qmldir
imports/QtQuick/Studio/LogicHelper/: qmldir
imports/QtQuick/Studio/MultiText/: qmldir
imports/QtQuick/Studio/QtQml/: qmldir
imports/QtQuick/Studio/QtQml/Models/: qmldir
imports/QtQuick/Studio/QtQml/WorkerScript/: qmldir
imports/QtQuick/Studio/QtQml/XmlListModel/: qmldir
imports/QtQuick/Studio/Timeline/: qmldir
imports/QtQuick/Studio/Timeline/BlendTrees/: qmldir
imports/QtQuick/Studio/Utils/: qmldir
kuksa-cpp-client/src/: generate.cmake
protocol/: agl-shell.xml
